[package]
name = "kdev"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
git2 = "0.19.0"
whoami = "1.5.1"
log = "0.4.22"
string-error = "0.1.0"
colored = "2.1.0"
tokio = { version = "1", features = ["full"] }
mio = "1.0.1"
notify = "6.1.1"
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
